fix: change gap in nav

--- a/pages/donate/style.css
+++ b/pages/donate/style.css
@@ -222,6 +222,7 @@ ul.nav-list {
   gap: 58px;
   font-size: 16px;
   font-weight: var(--fw-body-med);
+  padding-left: 0px;
 }
 
 ul.nav-list li {
@@ -229,7 +230,7 @@ ul.nav-list li {
 }
 
 ul.nav-list li:last-child {
-  margin-left: 230px;
+  margin-left: 380px;
   flex-shrink: 0;
 }
 
